# nextflow_on_bacalhau

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER_TESTING.md  LICENSE  Makefile  PHASE1_SUMMARY.md  README.md  SECURITY.md  TESTING_REMOTE.md  build.gradle  gradle.properties  mkdocs.yml  settings.gradle
.omc/: project-memory.json
dashboard/: .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
design/: federation-dashboard.md
docs/: architecture.md  configuration.md  contributing.md  data-handling.md  federation-dashboard.md  index.md  installation.md  quickstart.md  status.md
examples/: PLINK_GWAS_README.md  README.md  minimal.config  minimal.nf  nextflow.config  nextflow.local.config  (+2 more)
site-coordinator/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
site-coordinator/.omc/: project-memory.json
site-coordinator/.omc/state/: agent-replay-be659e26-b4b0-455c-b17f-14aedbcbf665.jsonl  subagent-tracking.json
site-coordinator/.omc/state/checkpoints/: checkpoint-2026-04-18T17-42-33-838Z.json
site-coordinator/src/site_coordinator/: __init__.py  __main__.py  audit.py  auth.py  bacalhau.py  config.py  invariant.py  launcher.py  main.py  models.py  store.py  supervisor.py
site-coordinator/src/site_coordinator/routes/: __init__.py  counts.py  healthz.py  runs.py
site-coordinator/tests/: conftest.py  test_counts.py  test_invariant.py  test_runs.py
site-coordinator/tests/fixtures/: bad_counts.tsv  good_counts.tsv
(+89 files in other folders)
